[package]
name = "web-scraper-in-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }      # reqwest with JSON parsing support
tokio = { version = "1.12.0", features = ["full"] }      # for our async runtime
serde = { version = "1.0", features = ["derive"] }
voyager = { version = "0.1" }
anyhow = { version = "1.0" }
futures = "0.3"                                          # for our async / await blocks
serde_json = "1.0"
regex = "1"
text-colorizer = "1"